--- a/Bucovina/styles.css
+++ b/Bucovina/styles.css
@@ -72,7 +72,7 @@ li {
   left: 0px;
   top: 0px;
   z-index: -1;
-  background-image: url("../images/BucovFade.jpg");
+  background-image: url("images/BucovFade.jpg");
   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
